--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -11,7 +11,9 @@
 
 html {
   @apply antialiased;
-  font-feature-settings: 'kern' 1, 'liga' 1;
+  font-feature-settings:
+    'kern' 1,
+    'liga' 1;
 }
 
 body {
